objects/n2de__Distributor_category_team_member__c.object
<CustomObject>
    <description>Distributor filter team members</description>
    <fields>
        <fullName>n2de__Distribution_team_member__c</fullName>
        <label>Distribution team member</label>
        <referenceTo>n2de__Team_member__c</referenceTo>
        <relationshipLabel>Distributor category team members</relationshipLabel>
        <relationshipName>Distributor_category_team_members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Distributor category team members</relationshipLabel>
        <relationshipName>Distributor_category_team_members</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor category</label>
        <referenceTo>n2de__Distributor_category__c</referenceTo>
        <relationshipLabel>Distributor category team members</relationshipLabel>
        <relationshipName>Distributor_category_team_members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Username__c</fullName>
        <formula>n2de__Distribution_team_member__r.n2de__User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <label>Distributor category team member</label>
    <nameField>
        <label>Distributor category team members Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Distributor category team members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>